syntax = "proto3";

package inventory;

// Definição do serviço InventoryService
service InventoryService {
    rpc SearchAllProducts(Empty) returns (ProductsResponse) {}
    rpc SearchProductByID(Payload) returns (ProductResponse) {}
}

// Definição da mensagem Payload
message Payload {
    int32 id = 1;
}

// Definição da mensagem ProductResponse
message ProductResponse {
    int32 id = 1;
    string name = 2;
    int32 quantity = 3;
    float price = 4;
    string photo = 5;
    string author = 6;
}

// Definição da mensagem ProductsResponse
message ProductsResponse {
    repeated ProductResponse products = 1;
}

// Definição da mensagem Empty (caso necessário para a operação SearchAllProducts)
message Empty {}
